@@ -14,6 +14,8 @@ Core and Builtins
 
 - Restore GIL in nis_cat in case of error.
 
+- Issue #9688: __basicsize__ and __itemsize__ must be accessed as Py_ssize_t.
+
 - Issue #8530: Prevent stringlib fastsearch from reading beyond the front
   of an array.
 
